# datasette-localized-numbers

./: .gitignore  README.md  pyproject.toml
datasette_localized_numbers/: __init__.py
tests/: test_localized_numbers.py
